Make quiz buttons compact & fix spacing issues

--- a/app/assets/stylesheets/controllers/questions.scss
+++ b/app/assets/stylesheets/controllers/questions.scss
@@ -6,23 +6,22 @@ body.questions {
   }
 
   .edit_quiz,
-  .game_submission {
-    margin-left: 8px;
-  }
-
-  .edit_quiz {
-    float: left;
-  }
-
+  .associate_questions,
   .game_submission {
     display: inline-block;
     float: left;
+    margin-left: 8px;
   }
 
   .new_filter {
     float: right;
     margin-bottom: 0;
     .input-append { margin-bottom: 0; }
+  }
+
+  .finish_associating {
+    margin-bottom: $baseLineHeight;
+    ~ .question_list { margin-top: 0; }
   }
 
 }
